crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__unused_import_has_unnecessary_hint_tag.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: diagnostics
---
{
  "kind": "full",
  "resultId": "[RESULT_ID]",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 7
        },
        "end": {
          "line": 0,
          "character": 9
        }
      },
      "severity": 4,
      "source": "ty",
      "message": "Import `os` is not used",
      "tags": [
        1
      ]
    }
  ]
}
