crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__workspace_diagnostic_long_polling_cancellation_result.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: result
---
Err(
    ResponseError(
        ResponseError {
            code: -32800,
            message: "request was cancelled by client",
            data: None,
        },
    ),
)
