crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__workspace_diagnostic_long_polling_shutdown_response.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: workspace_response
---
WorkspaceDiagnosticReport {
    items: [],
}
