crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__workspace_diagnostic_suspend_change_suspend_second_response.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: second_response
---
WorkspaceDiagnosticReport {
    items: [
        WorkspaceFullDocumentDiagnosticReport(
            WorkspaceFullDocumentDiagnosticReport {
                uri: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "<temp_dir>/src/test.py",
                    query: None,
                    fragment: None,
                },
                version: Some(
                    3,
                ),
                full_document_diagnostic_report: FullDocumentDiagnosticReport {
                    result_id: None,
                    items: [],
                },
            },
        ),
    ],
}
