crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__workspace_reports_current_analysis_unreachable_code_hint_tag.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: diagnostics
---
{
  "items": [
    {
      "kind": "full",
      "uri": "file://<temp_dir>/src/foo.py",
      "version": null,
      "resultId": "[RESULT_ID]",
      "items": [
        {
          "range": {
            "start": {
              "line": 3,
              "character": 4
            },
            "end": {
              "line": 3,
              "character": 27
            }
          },
          "severity": 4,
          "source": "ty",
          "message": "Code is unreachable\nThis may depend on your current environment and settings",
          "tags": [
            1
          ]
        }
      ]
    }
  ]
}
