crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__workspace_reports_unused_import_hint_tag.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: diagnostics
---
{
  "items": [
    {
      "uri": "file://<temp_dir>/src/foo.py",
      "version": null,
      "resultId": "[RESULT_ID]",
      "items": [
        {
          "range": {
            "start": {
              "line": 0,
              "character": 7
            },
            "end": {
              "line": 0,
              "character": 9
            }
          },
          "severity": 4,
          "source": "ty",
          "message": "Import `os` is not used",
          "tags": [
            1
          ]
        }
      ],
      "kind": "full"
    }
  ]
}
